--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditNoteActivity"></activity>
+        <activity android:name=".EditNoteActivity"
+            android:label="Add Note"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
